fix height of tracks on smaller devices

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -12,19 +12,28 @@ a {
 .slick-slider {
   margin-bottom: 1px;
 
-  .slide {
+  .slick-list {
     height: 100px;
-    min-width: 100px;
-    background-color: rgb(224,224,224);
-    opacity: 0.3;
 
-    img {
-      max-height: 100px;
+    .slick-track {
+
+      height: 100px;
+
+      .slide {
+        height: 100px;
+        min-width: 100px;
+        background-color: rgb(224, 224, 224);
+        opacity: 0.3;
+
+        img {
+          max-height: 100px;
+        }
+      }
+
+      .slide.slick-center {
+        opacity: 1.0;
+      }
     }
-  }
-
-  .slide.slick-center {
-    opacity: 1.0;
   }
 }
 
@@ -39,74 +48,118 @@ a {
 }
 
 .slick-slider.shirt {
-  .slide {
+
+  .slick-list {
     height: 200px;
 
-    img {
-      max-height: 200px;
-      min-height: 200px;
+    .slick-track {
+
+      height: 200px;
+      .slide {
+        height: 200px;
+
+        img {
+          max-height: 200px;
+          min-height: 200px;
+        }
+      }
     }
   }
 }
 
 .slick-slider.pants {
-  .slide {
+
+  .slick-list {
     height: 250px;
 
-    img {
-      max-height: 250px;
-      min-height: 250px;
+    .slick-track {
+
+      height: 250px;
+      .slide {
+        height: 250px;
+
+        img {
+          max-height: 250px;
+          min-height: 250px;
+        }
+      }
     }
   }
 }
 
 .slick-slider.shoes {
-  .slide {
+  .slick-list {
     height: 70px;
 
-    img {
-      max-height: 70px;
+    .slick-track {
+
+      height: 70px;
+      .slide {
+        height: 70px;
+
+        img {
+          max-height: 70px;
+        }
+      }
     }
   }
 }
 
 .slick-slider.project {
-  .slide {
-    margin: 10px;
-    border-radius: 15px;
-    height: 500px;
-    padding: 10px;
-    text-align: center;
-    max-width: 320px;
-  }
-
-  img {
-    max-width: 300px;
+  .slick-list {
     max-height: 400px;
-  }
+    height: 500px;
 
-  h4 {
-    margin-top: 5px;
-    margin-bottom: 5px;
+    .slick-track {
+
+      max-height: 400px;
+      height: 500px;
+      .slide {
+        margin: 10px;
+        border-radius: 15px;
+        height: 500px;
+        padding: 10px;
+        text-align: center;
+        max-width: 320px;
+      }
+
+      img {
+        max-width: 300px;
+        max-height: 400px;
+      }
+
+      h4 {
+        margin-top: 5px;
+        margin-bottom: 5px;
+      }
+    }
   }
 }
 
 .slick-slider.networks {
-  .slide {
-    background: transparent;
+  .slick-list {
     height: 66px;
-    margin-left: 15px;
-    margin-right: 15px;
-  }
 
-  md-chips.md-default-theme .md-chip {
-    padding-left: 30px;
-    padding-right: 30px;
-    height:50px;
+    .slick-track {
 
-    a {
-      font-size: larger;
-      margin-top: 9px;
+      height: 66px;
+      .slide {
+        background: transparent;
+        height: 66px;
+        margin-left: 15px;
+        margin-right: 15px;
+      }
+
+      md-chips.md-default-theme .md-chip {
+        padding-left: 30px;
+        padding-right: 30px;
+        height: 50px;
+
+        a {
+          font-size: larger;
+          margin-top: 9px;
+        }
+      }
     }
   }
 }
